--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
 amazon:
-    aws_access_key:
-    aws_secret_access_key:
+    aws_access_key: 0YSG6K5HPC0KAJHSMPG2
+    aws_secret_access_key: R3jcbuwc26wQnUBNQPkaYY53BJu7vGI72w7+phm2
     call_queue:
     agent_queue:
 
