--- a/config/application.yml
+++ b/config/application.yml
@@ -1,8 +1,9 @@
 amazon:
     aws_access_key: 0YSG6K5HPC0KAJHSMPG2
     aws_secret_access_key: R3jcbuwc26wQnUBNQPkaYY53BJu7vGI72w7+phm2
-    call_queue:
-    agent_queue:
+    endpoint: http://queue.amazonaws.com
+    contact_queue: contacts
+    agent_queue: agents
 
 twitter:
     username: squirrelrific
@@ -14,14 +15,16 @@ sinatra:
 
 agents:
     - name: John Doe
+      uname: jdoe
       phone: +14157044517
     - name: Jane Smith
+      uname: jsmith
       phone: +14153675082
       
 users:
-    - name:
-      phone:
-      twitter_user:
+    - name: Lenos Squirrel
+      phone: +14157044517
+      twitter_user: LenosSquirrel
     - name:
       phone:
       twitter_user:
