--- a/config/application.yml
+++ b/config/application.yml
@@ -1,11 +1,13 @@
-amazon:
-    aws_access_key: 0YSG6K5HPC0KAJHSMPG2
-    aws_secret_access_key: R3jcbuwc26wQnUBNQPkaYY53BJu7vGI72w7+phm2
-    endpoint: http://queue.amazonaws.com
-    session_sqs: sessions
-    agent_sqs: agents
-    db: SocialQ
-    db_attribute: stale_messages
+rabbit_mq:
+    # Status URL:  http://rabbit0002:RbIEJfCuMc@ec2-67-202-42-147.compute-1.amazonaws.com:30002/
+    user: rabbit0002
+    pass: RbIEJfCuMc
+    host: ec2-67-202-42-147.compute-1.amazonaws.com
+    port: 15002
+    vhost: /rabbit0002
+    logging: true
+    social_q: socialq # Where we publish the Social Q messages
+    agent_q: agentq # Where agent requests to take a call get passed
 
 twitter:
     username: squirrelrific
@@ -36,3 +38,8 @@ users:
 
 queue:
     timer: 1
+    weights:
+        phone: 10 # Arrived as a realtime phone request
+        tweet: 8 # Arrived as a tweet
+        influence: 2 # Factor by which social influence should weight, in this case (social influence * X )
+        keyword: 5 # If a keyword is spotted in the tweet stream of the user while in session, add X to the weight
