--- a/config/application.yml
+++ b/config/application.yml
@@ -6,8 +6,8 @@ rabbit_mq:
     port: 15002
     vhost: /rabbit0002
     logging: true
-    social_q: socialq # Where we publish the Social Q messages
-    agent_q: agentq # Where agent requests to take a call get passed
+    socialq: socialq # Where we publish the Social Q messages
+    agentq: agentq # Where agent requests to take a call get passed
 
 twitter:
     username: squirrelrific
