Added some additional tests.

--- a/config/application.yml
+++ b/config/application.yml
@@ -13,6 +13,7 @@ twitter:
     username: squirrelrific
     password: squirrelsrock
     keywords: squirrelrific
+    klout_key: txqh6gfjgwmb6tytv7yvb54y
 
 sinatra:
     port: 4567
@@ -36,10 +37,9 @@ users:
       phone_number:
       twitter_user:
 
-queue:
-    timer: 1
-    weights:
-        phone: 10 # Arrived as a realtime phone request
-        tweet: 8 # Arrived as a tweet
-        influence: 2 # Factor by which social influence should weight, in this case (social influence * X )
-        keyword: 5 # If a keyword is spotted in the tweet stream of the user while in session, add X to the weight
+
+weight_rules:
+    phone: 10 # Arrived as a realtime phone request
+    tweet: 8 # Arrived as a tweet
+    influence: 2 # Factor by which social influence should weight, in this case (social influence * X )
+    keyword: 5 # If a keyword is spotted in the tweet stream of the user while in session, add X to the weight
