Added queue name to match up the conference the user is in waiting for the agent. And thread safety on the Session object.

--- a/config/application.yml
+++ b/config/application.yml
@@ -33,11 +33,11 @@ agents:
       
 users:
     - name: Lenos Squirrel
-      phone_number: '+14157044517'
+      phone_number: '4157044517'
       twitter_user: LenosSquirrel
-    - name:
-      phone_number:
-      twitter_user:
+    - name: Jason Goecke
+      phone_number: jsgoecke
+      twitter_user: jsgoecke
     - name:
       phone_number:
       twitter_user:
