Removed AASM dependency and added Observable. Obesrve allows us to render the JSON to the queue when a watchword is tweeted.

--- a/config/application.yml
+++ b/config/application.yml
@@ -33,11 +33,12 @@ agents:
       
 users:
     - name: Lenos Squirrel
-      phone_number: '4157044517'
-      twitter_user: LenosSquirrel
-    - name: Jason Goecke
+      #phone_number: '4157044517'
       phone_number: jsgoecke
-      twitter_user: jsgoecke
+      twitter_user: LenosSquirrel
+    # - name: Jason Goecke
+    #   phone_number: jsgoecke
+    #   twitter_user: jsgoecke
     - name:
       phone_number:
       twitter_user:
