--- a/config/application.yml
+++ b/config/application.yml
@@ -60,7 +60,16 @@ users:
     - name: Heidi Squirrel
       phone_number: jsgoecke
       twitter_user: heidi_squirrel
-
+    - name: Arty Loud
+      phone_number: zhaoluus
+      twitter_user: alphacusty
+    - name: Pete Repeat
+      phone_number: plakias411
+      twitter_user: repeatercusty
+    - name: Lucy Look
+      phone_number: '6508983130'
+      twitter_user: watchercusty
+      
 weight_rules:
     phone: 10 # Arrived as a realtime phone request
     tweet: 8 # Arrived as a tweet
